# codex-test-project

./: .gitignore  README.md  SECURITY.md  pyproject.toml
src/hello_world/: __init__.py  __main__.py  main.py
src/regtech_kyc_aml/: __init__.py  __main__.py  kyc.py
tests/: test_main.py
